fix blockquote in dark mode

--- a/_includes/styles.css
+++ b/_includes/styles.css
@@ -11,9 +11,9 @@ h1{margin:0;}
 h2,h3,h4,h5{margin:2em 0 0;}
 p,blockquote,ul,table,pre,hr{margin:1em 0;}
 ul{padding-left:1em;}
-blockquote{background:#eef5fa;padding:0 1em;border:1px solid #dae9f4;}
+blockquote{background:#ADE;padding:0 1em;border:1px solid #9CD;}
 hr{border:1px dotted;}
-pre code{border:1px solid #fff1d6;display:block;overflow-x:auto;padding:4px;background:#fffaf0;}
+pre code{border:1px solid #fff1d6;color:#111;display:block;overflow-x:auto;padding:4px;background:#fffaf0;}
 table{border-collapse:collapse;}
 th,td{text-align:left;padding:2px 4px;}
 footer{border-top:1px dotted;margin:1em 0 0;padding-top:1em;} 
@@ -36,4 +36,5 @@ small,small a{color:#666;}
   a{color:#fff} 
   a:hover,a:focus{background:#fff;color:#111;}
   small,small a{color:#AAA;}
+  blockquote{background:#25A;border-color:#149;}
 }
